[gd_scene load_steps=7 format=3 uid="uid://c46jwdq74ilpo"]

[ext_resource type="Theme" uid="uid://bybbedfkdrq7s" path="res://Assets/Themes/default_theme.tres" id="1_juq3s"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="2_qnsno"]
[ext_resource type="Texture2D" uid="uid://b8ytrbdgk3anc" path="res://Assets/Players/Hands/red_hand.tres" id="3_8rnf0"]
[ext_resource type="Texture2D" uid="uid://carfsgi0hgvfl" path="res://Assets/splash_screen.png" id="3_jbqe5"]
[ext_resource type="Texture2D" uid="uid://bgnbdtt7w673c" path="res://Assets/Players/Bodies/red_player.tres" id="3_p6in7"]
[ext_resource type="AudioStream" uid="uid://dg76w3ksbi7wv" path="res://Assets/Music/bensound-lofinerdbassbuzzer.mp3" id="5_wfcmi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_juq3s")
script = ExtResource("2_qnsno")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.933333, 0.466667, 0.470588, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_jbqe5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 200
text = "Push 
the game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 10

[node name="HostGameButton" type="Button" parent="MarginContainer/MainMenu/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../JoinGameButton")
theme = ExtResource("1_juq3s")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="MarginContainer/MainMenu/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../HostGameButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Join Game"

[node name="SettingsButton" type="Button" parent="MarginContainer/MainMenu/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../JoinGameButton")
focus_neighbor_bottom = NodePath("../ExitButton")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/MainMenu/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="HostScreen" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HostScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="MarginContainer/HostScreen/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "Name:"

[node name="HostPlayerLineEdit" type="LineEdit" parent="MarginContainer/HostScreen/GridContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Host"

[node name="Label2" type="Label" parent="MarginContainer/HostScreen/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="MarginContainer/HostScreen/GridContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "8910"

[node name="HostButton" type="Button" parent="MarginContainer/HostScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Host.."

[node name="JoinScreen" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/JoinScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Label" type="Label" parent="MarginContainer/JoinScreen/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "Name:"

[node name="JoinPlayerLineEdit" type="LineEdit" parent="MarginContainer/JoinScreen/GridContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Peer"

[node name="Label2" type="Label" parent="MarginContainer/JoinScreen/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "Ip:"

[node name="IpLineEdit" type="LineEdit" parent="MarginContainer/JoinScreen/GridContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "127.0.0.1"

[node name="Label3" type="Label" parent="MarginContainer/JoinScreen/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "Port:"

[node name="PortLineEdit" type="LineEdit" parent="MarginContainer/JoinScreen/GridContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "8910"

[node name="JoinButton" type="Button" parent="MarginContainer/JoinScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Join.."

[node name="LobbyScreen" type="HBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LobbyScreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/LobbyScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 70
text = "Connected players..."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/LobbyScreen/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LobbyScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayerOneColor" type="TextureRect" parent="MarginContainer/LobbyScreen/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_8rnf0")
expand_mode = 1

[node name="PlayerTwoColor" type="TextureRect" parent="MarginContainer/LobbyScreen/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_8rnf0")
expand_mode = 1

[node name="PlayerThreeColor" type="TextureRect" parent="MarginContainer/LobbyScreen/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_8rnf0")
expand_mode = 1

[node name="TextEdit" type="TextEdit" parent="MarginContainer/LobbyScreen/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 500)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Compa
fdewuh
iuhscd"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/LobbyScreen"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/LobbyScreen/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 70
text = "Color select:   "

[node name="GridContainer" type="GridContainer" parent="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="LeftColorButton" type="Button" parent="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "<"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("3_p6in7")

[node name="RightColorButton" type="Button" parent="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = ">"

[node name="StartGameButton" type="Button" parent="MarginContainer/LobbyScreen/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start game"

[node name="SettingsScreen" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/SettingsScreen"]
layout_mode = 2
theme_override_constants/margin_left = 700
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 700

[node name="GridContainer" type="GridContainer" parent="MarginContainer/SettingsScreen/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/SettingsScreen/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "Music  
"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/SettingsScreen/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="MarginContainer/SettingsScreen/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 50
text = "SFX  "

[node name="SFXSlider" type="HSlider" parent="MarginContainer/SettingsScreen/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="MarginContainer/SettingsScreen"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wfcmi")
bus = &"Music"

[connection signal="pressed" from="MarginContainer/MainMenu/ButtonsVBox/HostGameButton" to="." method="_on_host_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/ButtonsVBox/JoinGameButton" to="." method="_on_join_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/ButtonsVBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/MainMenu/ButtonsVBox/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HostScreen/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/JoinScreen/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer/GridContainer/LeftColorButton" to="." method="_on_left_color_button_pressed"]
[connection signal="pressed" from="MarginContainer/LobbyScreen/VBoxContainer2/MarginContainer/VBoxContainer/GridContainer/RightColorButton" to="." method="_on_right_color_button_pressed"]
[connection signal="pressed" from="MarginContainer/LobbyScreen/VBoxContainer2/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="value_changed" from="MarginContainer/SettingsScreen/MarginContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/SettingsScreen/MarginContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/SettingsScreen/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
